syntax = "proto3";

package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

message WithDrawReq{
    //用户账号
    string userName=1;
    //钱包地址
    string walletAddress=2;
    // 提现金额
    double amount=3;
    //银行名称 
    string bank=4;
    //银行卡号
    string bankCard=5;
    //银行开卡人姓名
    string bankName=6;
}

message WithDrawRsp{
    //是否成功
    bool isOk=1;

}